--- a/index.html
+++ b/index.html
@@ -36,47 +36,47 @@
               <h2>Matheus Nogueira Santos</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Estágiario</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Mauá - SP, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>matheusnogueira874@outlook.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(11) 98152-1732</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"></i>Estágiario</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-black"></i>Mauá - SP, Brasil</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-black"></i>matheusnogueira874@outlook.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-black"></i>(11) 98152-1732</p>
               <hr>
   
               <p class="w3-large">
-                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
+                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-black"></i>Skills</b>
               </p>
               <p>HTML</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:80%">80%</div>
               </div>
               <p>CSS</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:80%">80%</div>
               </div>
               <p>JavaScript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">50%</div>
               </div>
               <p>Angular</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">50%</div>
               </div>
               <br>
   
               <p class="w3-large w3-text-theme">
-                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
+                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-black"></i>Idiomas</b>
               </p>
               <p>Português</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-black" style="height:24px;width:100%"></div>
               </div>
               <p>Ingles</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:40%"></div>
+                <div class="w3-round-xlarge w3-black" style="height:24px;width:40%"></div>
               </div>
               <p>Espanhol</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:20%"></div>
+                <div class="w3-round-xlarge w3-black" style="height:24px;width:20%"></div>
               </div>
               <br>
             </div>
@@ -89,7 +89,7 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Sobre</h2>
             <p>Sou o Matheus, estudante de Análise e Desenvolvimento de Sistemas em busca de uma vaga de estágio. 
 
               Tenho habilidades em tecnologias front-end, como HTML, CSS e JavaScript, além de experiência em MySQL, .NET, GIT e GIT Hub. 
@@ -101,11 +101,11 @@
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
+              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Educação
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro - 2022 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro - 2022 - <span class="w3-tag w3-black w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
@@ -120,17 +120,17 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>UNIFATECIE</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2022 - 2024</h6>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2022 - 2024</h6>
               <p>Faculdade de Analise e Desenvolvimento de Sistemas</p>
             </div>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
+              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Projetos
             </h2>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-black">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/nogueiiraa/angular-blog-dio" target="_blank">Blog com Angular</a>
               </h6>
@@ -148,7 +148,7 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <footer class="w3-container w3-black w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://github.com/nogueiiraa" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/matheus-nogueira-a9a79515b/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
